feat: add button logic

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,7 +4,7 @@
     <string name="buttonPrev">Предыдущий</string>
     <string name="buttonNext">Следующий</string>
     <string name="name1">Ведущая</string>
-    <string name="name2">Песнь Сольвейг</string>
+    <string name="name2">Песня Сольвейг</string>
     <string name="name3">Хребет Эвереста</string>
     <string name="name4">Заморские гости</string>
     <string name="name5">Весна священная</string>
